--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6247,7 +6247,7 @@ button.close {
   background-color: #fff;
 }
 .carousel-caption {
-  position: absolute;
+
   right: 15%;
   bottom: 20px;
   left: 15%;
@@ -6256,7 +6256,7 @@ button.close {
   padding-bottom: 20px;
   color: #fff;
   text-align: center;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 1);
 }
 .carousel-caption .btn {
   text-shadow: none;
